# c2pa-watermark-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker-build.yml
c2pa_watermark_mcp/: __init__.py  server.py
tests/: test_c2pa_watermark.py
